aading menu main to projects team 503

--- a/presentaciones/grupo503.html
+++ b/presentaciones/grupo503.html
@@ -20,14 +20,13 @@
 					<div>
 						<img src="../img/toroups-1.png" alt="toroUPT">
 						<ul>
-							<a href="./503/Rocket/Diapositivas Extra/Los-valores-nulos.html"><li>Jorge</li></a>
-							<a href="./503/Buena-Onda/index.html"><li>Clases de Relación</li></a>
-							<a href="./503/Fantasmas/index.html"><li>Definición formal de relación</li></a>
-							<a href="./503/Andrómeda/Restricciones-de-rechazo.html"><li>Restricciones de rechazo</li></a>
-							<a href="./503/ML/Propiedades-características-de-las-relaciones.html"><li>Propiedades o características de las relaciones</li></a>
-							<a href="./503/Los-yucks/Restricciones.html"><li>Restricciones</li></a>
-							<a href="./503/Rocket/Los-valores-nulos.html"><li>Los valores nulos</li></a>
-							<a href="#"><li>TIPOS DE DEPENDENCIAS FUNCIONALES (DF)</li></a>
+							<a href="#"><li>3 y 4</li></a>
+							<a href="#"><li>5 y 6</li></a>
+							<a href="#"><li>7 y 8</li></a>
+							<a href="#"></a><li>9 y 10</li></a>
+							<a href="#"></a><li>11 y 12</li></a>
+							<a href="#"><li>13 y 14</li></a>
+							<a href="#"><li>15 y 16</li></a>							
 						</ul>
 					</div>
 				</section>
