--- a/presentaciones/grupo503.html
+++ b/presentaciones/grupo503.html
@@ -24,7 +24,7 @@
 							<a href="#"><li>5 y 6</li></a>
 							<a href="#"><li>7 y 8</li></a>
 							<a href="#"></a><li>9 y 10</li></a>
-							<a href="503/Andrómeda/11-12.html"></a><li>11 y 12</li></a>
+							<a href="../presentaciones\503\Andrómeda\11-12.html"></a><li>11 y 12</li></a>
 							<a href="#"><li>13 y 14</li></a>
 							<a href=""><li>15 y 16</li></a>							
 						</ul>
