--- a/presentaciones/503/Andrómeda/11-12.html
+++ b/presentaciones/503/Andrómeda/11-12.html
@@ -39,32 +39,32 @@
         <section>
             <h2>SELECT * FROM...</h2>
             <p>Si queremos mostrar todos los registros de una tabla usaremos SELECT * FROM y el nombre de la tabla.</p>
-            <img src="/imag/imagen1.png" alt="SELECT * FROM...">
+            <img src="imag/imagen1.png" alt="SELECT * FROM...">
         </section>
         <section>
             <h2>SELECT...FROM...</h2>
             <p>Podemos realizar una consulta donde se nos muestre solo las columnas que nos interesa.</p>
-            <img src="/imag/imagen2.png" alt="SELECT...FROM...">
+            <img src="imag/imagen2.png" alt="SELECT...FROM...">
         </section>
         <section>
             <h2>SELECT DISTINCT...FROM...</h2>
             <p>En una consulta podría haber registros repetidos, si quisiéramos evitar mostrar las filas repetidas usaríamos el comando DISTINCT.</p>
-            <img src="/imag/imagen3.png" alt="SELECT DISTINCT...FROM...">
+            <img src="imag/imagen3.png" alt="SELECT DISTINCT...FROM...">
         </section>
         <section>
             <h2>SELECT...FROM...WHERE...</h2>
             <p>Si queremos filtrar las filas que aparecen en la consulta podemos usar la sentencia WHERE.</p>
-            <img src="/imag/imagen4.png" alt="SELECT...FROM...WHERE...">
+            <img src="imag/imagen4.png" alt="SELECT...FROM...WHERE...">
         </section>
         <section>    
             <h2>SELECT...FROM...WHERE...AND</h2>
             <p>Incluso anidar 2 condiciones usando el comando AND.</p>
-            <img src="/imag/imagen5.png" alt="SELECT...FROM...WHERE...AND...">
+            <img src="imag/imagen5.png" alt="SELECT...FROM...WHERE...AND...">
         </section>
         <section>
             <h2>La cláusula LIMIT</h2>
             <p>La cláusula LIMIT puede usarse con 2 parámetros. Cuando se usan ambos, el primero muestra la fila a partir de la que debemos empezar a mostrar registros, y el segundo parámetro muestra el número de filas a mostrar (contando desde la primera)</p>
-            <img src="/imag/imagen6.jpg" alt="La cláusula LIMIT">
+            <img src="imag/imagen6.jpg" alt="La cláusula LIMIT">
         </section>
         <section>
             <h2>AGRUPAR FILAS</h2>
@@ -87,17 +87,17 @@
         <section>
             <h2>SELECT … FROM … GROUP BY…</h2>
             <p>Es posible agrupar filas en la salida de una sentencia SELECT según los distintos valores de una columna, usando la cláusula GROUP BY.</p>
-            <img src="/imag/imagen7.jpg" alt="SELECT … FROM … GROUP BY…">
+            <img src="imag/imagen7.jpg" alt="SELECT … FROM … GROUP BY…">
         </section>
         <section>
             <h2>SELECT … COUNT(*) FROM … GROUP BY…</h2>
             <p>Pero la diferencia principal es que el uso de la cláusula GROUP BY permite usar funciones de resumen o reunión. Por ejemplo, la función COUNT().</p>
-            <img src="/imag/imagen8.jpg" alt="SELECT … COUNT(*) FROM … GROUP BY…">
+            <img src="imag/imagen8.jpg" alt="SELECT … COUNT(*) FROM … GROUP BY…">
         </section>
         <section>
             <h2>SELECT … MAX(…) FROM … GROUP BY … HAVING MAX(…) …</h2>
             <p>La cláusula HAVING() permite hacer selecciones con GROUP BY en columnas calculadas con funciones de grupo, como MAX(), MIN(), AVG(), COUNT()… Se podría entender como un WHERE para usar junto a GROUP BY().</p>
-            <img src="/imag/imagen9.jpg" alt="SELECT … MAX(…) FROM … GROUP BY … HAVING MAX(…) …">
+            <img src="imag/imagen9.jpg" alt="SELECT … MAX(…) FROM … GROUP BY … HAVING MAX(…) …">
         </section>
     </div>
 </div>
